# multilanguage-semantic-classification

./: .gitignore  Documentation.docx  README.md  links.txt  predictions.csv
notebooks/: baseline_models.ipynb  ml-final-data-preprocessing.ipynb  ml-final-inference.ipynb  transformers.ipynb
parser/: README.md  devenv.nix  pyproject.toml
parser/cleaning_and_labeling/: marimo_data_cleaning.py  reviews_labeling.py
parser/db/: firm_db.py  reviews_db.py
parser/parsing/: firms_parse.py  reviews_parse.py
